# Temporal-Graph-Rag

./: .env.example  .gitignore  LICENSE  PACKAGE_SUMMARY.md  PICKLE_FIX_GUIDE.md  QUICKSTART.md  README.md  graph_rag_cli.py  kaggle_pickle_fix.py  pyproject.toml  requirements.txt  setup.sh  setup_quick.py  standalone_cli.py  test_pickle_fix.py
data/: example_test_qa.csv  example_triplets.csv
docs/: API.md
examples/: basic_usage.py
src/temporal_graph_rag/: __init__.py  __main__.py  legacy_compat.py
src/temporal_graph_rag/cli/: __init__.py  build_graph.py  evaluate.py  inference.py  main.py
src/temporal_graph_rag/core/: __init__.py  evaluator.py  groq_client.py  neo4j_client.py  question_processor.py  temporal_graph.py
src/temporal_graph_rag/utils/: __init__.py  date_utils.py  text_utils.py
tests/: test_basic.py
